# lego

./: ().py  .coveragerc  .dockerignore  .drone.yml  .drone.yml.sig  .flake8  .frigg.yml  .gitignore  .isort.cfg  .mypy.ini  AOC_INTEGRATION.md  Dockerfile  LICENSE  Makefile  README.md  celerybeat-schedule.db  circle.yml  codecov.yml  docker-compose.extra.yml  docker-compose.yml  grep  lego.ini  manage.py  out  pyproject.toml  setup.cfg  setup_aoc_oauth.py  sitecustomize.py  start.sh  tox.ini  update_oauth_app.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: codeql-analysis.yml  lego.yml
charts/lego/: Chart.yaml  values.yaml
charts/lego/templates/: api-deployment.yaml  api-service.yaml  beat-deployment.yaml  hooks.yaml  worker-deployment.yaml  ws-server-deployment.yaml  ws-server-service.yaml  ws-worker-deployment.yaml
docs/: Makefile  authentication.rst  conf.py  events.rst  external_sync.rst  feeds.rst  files.rst  health_checks.rst  index.rst  logging.rst  mail.rst  notifications.rst  permissions.rst  settings.rst  site_search.rst  stats.rst
lego/: __init__.py  apps.py  asgi.py  authentication.py  backends.py  halla.py  test_views.py  urls.py  wsgi.py
lego/api/: filters.py  mixins.py  router.py  test_urls.py  urls.py  v1.py
lego/api/tests/: test_authentication.py  test_docs.py  test_mixin.py
lego/app/abakusgroups/: models.py
lego/app/articles/: models.py  permissions.py  search_indexes.py  serializers.py
lego/app/comments/: models.py  permissions.py  serializers.py
lego/app/content/: models.py  tests.py
lego/app/events/: exceptions.py  models.py  permissions.py  serializers.py  views.py
lego/app/feed/: activities.py  aggregator.py  feed_serializers.py  feeds.py  managers.py  serializers.py  tasks.py  verbs.py  views.py
lego/app/flatpages/: api.py  managers.py  models.py  permissions.py  serializers.py  test_api.py  views.py
lego/app/mail/: admin.py  logic.py  mixins.py  models.py  test_logic.py  validators.py
lego/app/oauth/: fields.py  models.py  serializers.py  views.py
lego/app/objectpermissions/: filters.py  models.py
lego/app/quotes/: models.py  permissions.py  serializers.py
lego/apps/achievements/: apps.py  constants.py  filters.py  models.py  notifications.py  pagination.py  permissions.py  promotion.py  serializers.py  signals.py  tasks.py  verification.py  views.py
lego/apps/action_handlers/: __init__.py  apps.py  events.py  handler.py  registry.py  signals.py  tasks.py
lego/apps/admissions/: models.py  serializers.py  views.py
lego/apps/articles/: filters.py  models.py  search_indexes.py  serializers.py  views.py
lego/apps/banners/: apps.py  constants.py  models.py  permissions.py  serializers.py  tests.py  views.py
lego/apps/bdb/: models.py  serializers.py  views.py
lego/apps/comments/: action_handlers.py  constants.py  models.py  notifications.py  permissions.py  serializers.py  views.py  websockets.py
lego/apps/companies/: action_handlers.py  constants.py  fields.py  filters.py  models.py  notifications.py  permissions.py  search_indexes.py  serializers.py  views.py
lego/apps/contact/: send.py  serializers.py  views.py
lego/apps/content/: fields.py  models.py  tests.py  utils.py
lego/apps/email/: fields.py  filters.py  models.py  permissions.py  serializers.py  tasks.py  validators.py  views.py
lego/apps/emojis/: exceptions.py  models.py  permissions.py  serializers.py  views.py
lego/apps/events/: __init__.py  action_handlers.py  apps.py  constants.py  exceptions.py  fields.py  filters.py  managers.py  models.py  notifications.py  permissions.py  registration_eligibility.py  search_indexes.py  serializers.py  signals.py  tasks.py  views.py  webhooks.py  websockets.py
lego/apps/external_sync/: base.py  models.py  sync.py  tasks.py
lego/apps/featureflags/: apps.py  models.py  permissions.py  serializers.py  tests.py  views.py
lego/apps/feed/: __init__.py  activities.py  aggregator.py  apps.py  attr_cache.py  attr_renderers.py  feed.py  feed_manager.py  feed_metrics.py  feed_models.py  feed_serializers.py  feeds.py  fields.py  managers.py  models.py  registry.py  serializers.py  signal_handler.py  signals.py  tasks.py  verbs.py  views.py
lego/apps/feeds/: activity.py  aggregator.py  apps.py  attr_cache.py  attr_renderers.py  constants.py  fanout_manager.py  feed_manager.py  marker.py  models.py  serializers.py  storage.py  tasks.py  utils.py  verbs.py  views.py  websockets.py
lego/apps/files/: constants.py  exceptions.py  fields.py  models.py  serializers.py  storage.py  thumbor.py  tokens.py  utils.py  validators.py  views.py
lego/apps/flatpages/: constants.py  models.py  permissions.py  serializers.py  (+2 more)
lego/permissions/: backends.py  filters.py  keyword_permissions.py  managers.py  models.py  object_permissions.py  permissions.py  validators.py
lego/search/: __init__.py  apps.py  es.py  index.py  models.py  registry.py  search.py  search_indexes.py  serializers.py  signal_handler.py  signals.py  tasks.py  views.py
lego/settings/: __init__.py  base.py  celery.py  development.py  lego.py  local_development.py  logging.py  mail.py  production.py  rest_framework.py  search.py  secure.py  test.py
lego/templates/: base.html  before_launch.html  landing.html
lego/test/: test_backends.py
lego/tests/: test_backends.py  test_views.py
lego/users/: admin.py  fields.py  filters.py  managers.py  models.py  permissions.py  serializers.py  validators.py
lego/utils/: __init__.py  apps.py  base_serializer.py  content_types.py  context_processors.py  cors.py  decorators.py  email.py  exceptions.py  fields.py  functions.py  json.py  json_web_tokens.py  logger.py  management_command.py  managers.py  metrics.py  middleware.py  models.py  pagination.py  push.py  renderers.py  serializers.py  signals.py  tasks.py  test_cases.py  test_utils.py  types.py  validators.py  views.py  youtube_validator.py
minio/: config.json
requirements/: base.txt  black.txt  coverage.txt  dev.txt  flake8.txt  isort.txt  mypy.txt  prod.txt  test.txt  yapf.txt
thumbor/: Dockerfile  thumbor.conf.tpl
(+1477 files in other folders)
