[project]
authors = [
    {name = "Webkom", email = "webkom@abakus.no"},
]
dependencies = [
    "django==4.0.8",
    "ipython==8.7.0",
    "psycopg2-binary==2.9.5",
    "unicode-slugify==0.1.5",
    "pyyaml==6.0",
    "redis==4.4.0",
    "hiredis==2.1.0",
    "certifi==2022.12.7",
    "elasticsearch==7.16.2",
    "celery==5.2.7",
    "stripe==3.4.0",
    "boto3==1.26.31",
    "beautifulsoup4==4.11.1",
    "bleach==5.0.1",
    "requests==2.28.1",
    "ldap3==2.9.1",
    "google-api-python-client==2.70.0",
    "oauth2client>=4.1.3",
    "libthumbor==2.0.2",
    "django-health-check==3.17.0",
    "djangorestframework==3.14.0",
    "drf-jwt==1.19.2",
    "djangorestframework-camel-case==1.3.0",
    "django-extensions==3.2.1",
    "django-autoslug==1.9.8",
    "django-oauth-toolkit==1.6.3",
    "django-cors-headers==3.13.0",
    "django-mptt==0.14.0",
    "django-filter==22.1",
    "django-environ==0.9.0",
    "django-redis==5.2.0",
    "django-ipware==4.0.2",
    "django-phonenumber-field[phonenumberslite]==7.0.1",
    "django-push-notifications==3.0.0",
    "django-ical==1.8.3",
    "icalendar==5.0.3",
    #
    # Channels
    "channels==3.0.5",
    "channels-redis==4.0.0",
    "daphne==3.0.2",
    "flatbuffers==22.12.6",
    #
    # Email
    "aiosmtpd==1.4.2",
    "premailer==3.10.0",
    #
    # Logging/errors
    "structlog==21.5.0",
    "structlog-sentry==1.4.0",
    "sentry-sdk==1.12.0",
    "analytics-python==1.2.9",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[project.urls]
Homepage = "https://lego.abakus.no"
Repository = "https://github.com/webkom/lego"
Documentation = "https://lego.abakus.no/docs/"
 
[too.pdm.optional-dependencies]
prod = [
    "uwsgi",
    "flower==1.2.0",
]

[tool.pdm.dev-dependencies]
dev = [
    "django-debug-toolbar==3.8.1",
]
test = [
    "coverage==6.5.0",
]
tox = [    
    "tox==4.0.11",
]
mypy = [
    "mypy==0.991",
    "mypy-extensions==0.4.3",
    "django-stubs==1.13.1",
    "djangorestframework-stubs==1.8.0",
    "types-bleach==5.0.3.1",
    "types-certifi==2021.10.8.3",
    "types-docutils==0.19.1.1",
    "types-Markdown==3.4.2.1",
    "types-python-slugify==7.0.0.1",
    "types-PyYAML==6.0.12.2",
    "types-requests==2.28.11.5",
    "types-six==1.16.21.4",
    "types-urllib3==1.26.25.4",
]
formatting = [
    "black==22.12.0",
    "isort==5.11.2", 
]
flake8 = [
    "flake8==6.0.0",
    "flake8-bugbear==22.12.6",
    "flake8-comprehensions==3.10.1",
]
docs = [
    "sphinx>=5.3.0",
    "sphinx-rtd-theme>=1.1.1",
    "Pygments==2.13.0",
    "Markdown==3.4.1",
    "coreapi==2.3.3",
]
